--- a/src/scss/Footer.scss
+++ b/src/scss/Footer.scss
@@ -31,6 +31,10 @@
 
 .footer__columns {
     scroll-behavior: smooth;
+    &::-webkit-scrollbar {
+        width: 0;
+        height: 0;
+    }
     display: flex;
     justify-content: space-between;
     margin-bottom: 53px;
