--- a/src/scss/Header.scss
+++ b/src/scss/Header.scss
@@ -56,21 +56,25 @@
         display: flex;
         align-items: center;
         padding: 0 15px;
+        cursor: pointer;
         @extend %transitions;
 
-        .tomain {
+        .routingLink {
             text-decoration: none;
             color: white;
         }
 
         &:hover {
-            color: #b6b5b5;
             transform: scale(1.12);
         }
-    }
 
-    li:not(:first-child) {
-        margin-left: 60px;
+        &:not(:first-child) {
+            margin-left: 60px;
+        }
+
+        &:nth-child(2) {
+            opacity: 0.4;
+        }
     }
 
     >img {
