--- a/src/scss/MainPage/RecomendedList.scss
+++ b/src/scss/MainPage/RecomendedList.scss
@@ -25,18 +25,18 @@
             position: absolute;
             flex-direction: column;
             justify-content: space-between;
-            padding: 10px 20px;
+            padding: 30px 28px;
             list-style: none;
-            width: 150px;
-            height: 140px;
-            color: black;
+            width: 210px;
+            height: 215px;
+            color: rgb(0, 0, 0);
             background-color: white;
-            border-radius: 15px;
-            border: 3px solid black;
+            border-radius: 5px;
+            box-shadow: 3px 3px 6px black;
 
             li {
-                font-size: 18px;
-                font-weight: 500;
+                font-size: 20px;
+                font-weight: 400;
                 cursor: pointer;
             }
 
